--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -1,18 +1,35 @@
 @use '../base/typography';
-
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
 .header{
+text-align: start;
+font-family: 'Sansation Bold';
+display: grid;
+
+&__title{
+
+  font-size:var(--size-10) ;
+  font-weight:var(--font-weight-8);
+  padding: var(--size-8);
+  
+
+}
+
+&__subtitle{
+  font-size:var(--font-size-8) ;
+  font-weight:var(--font-weight-5);
+  padding-inline-start: var(--size-9);
+  padding-block-end:var(--size-5) ;
+}
+
+&__author{
+  font-size:var(--font-size-5) ;
+  font-weight:var(--font-weight-6);
+  padding-inline-start: var(--size-10);
+  font-style: italic;
+}
 
 
-
-
-
-
-
-
-    &__image {
-        max-width: var(--size-15);
-        margin-inline: auto;
-        block-size: 100%;
-        object-fit: cover;
-  }
 }
